fix: added window relocation to index.html in start.js. Removed z-index from body and background-gray class in landingspagina.css. updated content index.html

--- a/public/stylesheets/landingspagina.css
+++ b/public/stylesheets/landingspagina.css
@@ -6,7 +6,7 @@ body {
     font-family: IBM Plex Sans;
     background-color: #CAD3BD;
     padding: 0px;
-    z-index: -99;
+    /* z-index: -99; */
 }
 
 /* headings */
@@ -112,7 +112,7 @@ hr.line {
 .background--gray {
     background-color: #FAFAF8;
     border-radius: 0 75px 0 0;
-    z-index: -1;
+    /* z-index: -1; */
     position: relative;
     bottom: -200px;
     padding-bottom: 200px;
